--- a/css/styles.css
+++ b/css/styles.css
@@ -296,11 +296,24 @@ footer {
   border-radius: 4px;
 
   background-color: var(--secondary-bg-color);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .icon-antenna::before {
   background-image: url(../images/antenna\ 1.svg);
-  background-repeat: no-repeat;
+}
+
+.icon-clock::before {
+  background-image: url(../images/clock\ 1.svg);
+}
+
+.icon-diagram::before {
+  background-image: url(../images/diagram\ 1.svg);
+}
+
+.icon-astronaut::before {
+  background-image: url(../images/astronaut\ 1.svg);
 }
 
 /* Деятельность */
