--- a/css/styles.css
+++ b/css/styles.css
@@ -384,6 +384,13 @@ footer {
   background-color: var(--main-bg-color);
 }
 
+/* Клиенты */
+
+.client-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* СТРАНИЦА "ПОРТФОЛИО" */
 /* Кнопки фильтра */
 .portfolio-section {
