--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,8 @@ footer {
 
 .projects-list a:hover,
 .projects-list a:focus {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: block;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project-item:nth-child(3n) {
