--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,13 @@ img {
   display: flex;
 }
 
-.contact-icon:hover. .contact-icon:focus {
+.contact-icon {
+  margin-right: 10px;
+  margin-top: 14px;
+}
+
+.contact-icon:hover,
+.contact-icon:focus {
   fill: var(--accent-text-color);
 }
 
@@ -309,13 +315,13 @@ footer {
   border-radius: 4px;
 
   background-color: var(--secondary-bg-color);
-  background-repeat: no-repeat;
 }
 
 .feature-list svg {
   display: block;
   max-width: 70px;
   height: 70px;
+  margin: 25px 100px;
   background-position: center;
 }
 
@@ -400,10 +406,11 @@ footer {
   background-position: center;
 }
 
-/* .social-link:hover,
+/* 
+.social-link:hover,
 .social-link:focus {
   border-radius: 50%;
-  background-color: var(--accent-text-color: #2196f3;);
+  background-color: var(--accent-text-color: #2196f3);
 } */
 
 .social-item:not(:last-child) {
@@ -413,6 +420,7 @@ footer {
 .socials svg {
   width: 20px;
   height: 20px;
+  background-position: center;
 }
 
 /* Клиенты */
@@ -420,6 +428,25 @@ footer {
 .client-section {
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.client-list {
+  display: flex;
+}
+
+.client-item {
+  width: calc((100% - 150px) / 6);
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+
+.client-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.client-link {
+  display: block;
 }
 
 /* СТРАНИЦА "ПОРТФОЛИО" */
