--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --accent-bg-color: #2f303a;
   --border-color-head: #ececec;
   --border-color-elements: #eeeeee;
+  --main-icons-color: #afb1b8;
 }
 
 /* ОБЩЕЕ */
@@ -196,8 +197,12 @@ footer {
   letter-spacing: 0.03em;
 }
 
-.footer-contacts a:hover,
-.footer-contacts a:focus {
+.contact-icon {
+  fill: currentColor;
+}
+
+.contact-icon:hover,
+.contact-icon:focus {
   color: var(--accent-text-color);
 }
 
@@ -218,7 +223,6 @@ footer {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  /* linear-gradient(to right, rgba(47, 48, 58, 0.4)), */
 }
 
 .hero-title {
@@ -309,6 +313,9 @@ footer {
 }
 
 .feature-icon-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
@@ -319,8 +326,6 @@ footer {
 .feature-icon {
   max-width: 70px;
   height: 70px;
-  margin-right: auto;
-  margin-left: auto;
   background-position: center;
 }
 
@@ -399,18 +404,23 @@ footer {
 }
 
 .social-link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
-  background-position: center;
 }
 
-/* 
+.social-icon {
+  fill: var(--main-icons-color);
+}
+
 .social-link:hover,
 .social-link:focus {
   border-radius: 50%;
   background-color: var(--accent-text-color: #2196f3);
-} */
+  fill: var(--title-text-color: #ffffff);
+}
 
 .social-item:not(:last-child) {
   margin-right: 10px;
@@ -420,6 +430,7 @@ footer {
   width: 20px;
   height: 20px;
   background-position: center;
+  fill: #afb1b8;
 }
 
 /* Клиенты */
@@ -436,8 +447,6 @@ footer {
 .client-item {
   width: calc((100% - 150px) / 6);
   height: 90px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
 }
 
 .client-item:not(:last-child) {
@@ -445,8 +454,12 @@ footer {
 }
 
 .client-link {
-  display: block;
-  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
 
 /* СТРАНИЦА "ПОРТФОЛИО" */
