--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,11 @@ img {
   letter-spacing: 0.02em;
 }
 
+.header-contacts p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .header-contacts a {
   align-items: center;
 }
